--- a/source/_header.html.erb
+++ b/source/_header.html.erb
@@ -14,22 +14,13 @@
     <nav class="main-navigation">
       <ul>
         <li>
-          <%= nav_link "Line-up", "/line-up/", class: "nav-item", title: "Line-up" %>
-        </li>
-        <li>
-          <%= nav_link "Timetable", "/timetable/", class: "nav-item", title: "Timetable" %>
+          <%= nav_link "Home", "/", class: "nav-item", title: "Home" %>
         </li>
         <li>
           <%= nav_link "Info", "/info/", class: "nav-item", title: "Informatie" %>
         </li>
         <li>
           <%= nav_link "Contact", "/contact/", class: "nav-item", title: "Contact" %>
-        </li>
-        <li>
-          <a class="icon-facebook" href="https://www.facebook.com/events/191110228287711/" target="_blank" title="Check het Facebook event"></a>
-        </li>
-        <li>
-          <a class="button orange" href="https://frontoffice.paylogic.nl/?event_id=122408&point_of_sale_id=17537" target="_blank" title="Koop nu je tickets">Tickets &raquo;</a>
         </li>
       </ul>
     </nav>
