--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,5 +1,5 @@
 ---
-title: Welkom bij het Hop! into the Grain Craft Beer & Music Festival
+title: Welkom bij het Hop! into the Grain Craft Beer & Music Festival 2019
 description: "Het nieuwste bierfestival van Groningen: Hop! into the Grain Craft Beer & Music Festival."
 ---
 
@@ -7,28 +7,8 @@ description: "Het nieuwste bierfestival van Groningen: Hop! into the Grain Craft
   <div class="row">
     <%= image_tag("logo-hop-into-the-grain-big.png") %>
     <h2>
-      <span>26 mei 2018, 12:00 - 01:30</span>
-      <span>EM2 "the barn", Groningen</span>
+      <span>Het festival was een groot succes, we zien je daarom graag terug op zaterdag 25 mei 2019.</span>
     </h2>
-    <a class="button big orange" href="https://frontoffice.paylogic.nl/?event_id=122408&point_of_sale_id=17537" target="_blank">
-      Koop een kaartje &raquo;
-    </a>
-    <p>
-      Of koop je oldschool papieren ticket bij Just in Beer!
-    </p>
-  </div>
-</section>
-
-<section class="masterclass">
-  <div class="row">
-    <h2>Jopen Masterclass!</h2>
-    <%= image_tag "line-up/jopen.png", alt: "Brouwerij Jopen", title: "Brouwerij Jopen" %>
-    <p>
-      Er zijn vanaf nu losse kaarten verkrijgbaar voor de Jopen Masterclass, inclusief 5 proefglaasjes craft beer! De masterclass start om 16:00 uur (inloop vanaf 15:45 uur). Locatie van de Masterclass is in de partytent op het buitenterrein. Een kaartje kost maar €9,95 (beperkt beschikbaar). Om deel te kunnen nemen aan de Masterclass is een festivalticket niet nodig.
-    </p>
-    <a class="button big orange" href="https://frontoffice.paylogic.nl/?event_id=122408&point_of_sale_id=17537" target="_blank">
-      Koop een kaartje &raquo;
-    </a>
   </div>
 </section>
 
@@ -38,7 +18,7 @@ description: "Het nieuwste bierfestival van Groningen: Hop! into the Grain Craft
     <h2>Aftellen...</h2>
 
     <p>
-      Hoe lang nog tot Hop! into the Grain Festival begint?
+      Hoe lang nog tot Hop! into the Grain Festival 2019 begint?
     </p>
 
     <div class="counter-wrapper" id="timer">
@@ -47,38 +27,5 @@ description: "Het nieuwste bierfestival van Groningen: Hop! into the Grain Craft
 
   </div>
 </section>
-
-<section class="featured-line-up">
-  <div class="row">
-
-    <h2>
-      Line-up
-    </h2>
-
-    <p>
-      Proef een breed scala aan geweldig Nederlands craft beer en geniet van het luisteren naar live muziek.
-    </p>
-
-    <div class="line-up-wrapper">
-      <div class="line-up-block">
-        <%= image_tag "line-up/het-uiltje.png", alt: "Brouwerij Het Uiltje", title: "Brouwerij Het Uiltje" %>
-      </div>
-      <div class="line-up-block">
-        <%= image_tag "line-up/rockin-ludina.png", alt: "Brouwerij Rockin' Ludina", title: "Brouwerij Rockin' Ludina" %>
-      </div>
-      <div class="line-up-block">
-        <%= image_tag "line-up/jopen.png", alt: "Brouwerij Jopen", title: "Brouwerij Jopen" %>
-      </div>
-      <div class="line-up-block">
-        <%= image_tag "line-up/frontaal.png", alt: "Brouwerij Frontaal", title: "Brouwerij Frontaal" %>
-      </div>
-    </div>
-
-    <a href="/line-up/" class="button big orange">Bekijk volledige line-up</a>
-
-  </div>
-</section>
-
-<%= partial "playlist", locals: { height: "80" } %>
 
 <%= partial "maps" %>
