--- a/source/info.html.erb
+++ b/source/info.html.erb
@@ -20,28 +20,11 @@ description: Waar is Hop! into the Grain Craft Beer & Music Festival? Waar kan i
         Welkom op Hop! into the Grain Craft Beer & Music Festival!
       </h2>
       <p>
-        Dat je hier bent komen kijken betekent dat je geïnteresseerd bent in dit geweldige lentefestival. Dat is natuurlijk volkomen terecht! 🙂
+        Het festival was een groot succes. Op 25 mei 2019 organiseren we daarom de volgende editie, noteer het vast in je agenda! Tot die tijd kun je voor al je bierwensen terecht bij <a href="https://www.justinbeer.nl">Just in Beer</a>, Folkingestraat 18 te Groningen</p>
       </p>
       <p>
-        Naast dat er <a href="/line-up/">uitstekende regionale en nationale brouwerijen</a> (en een ciderman!) zullen staan hebben we ook <a href="/line-up/">een muziekprogramma</a> met diverse talentvolle acts van uiteenlopende genres. Natuurlijk kan dit alles niet zonder wat <em>good food</em>, dus hebben we ook wat foodtrucks uitgenodigd.
-      </p>
-      <p>
-        Het bier- en muziekfestival, georganiseerd door <a href="https://www.justinbeer.nl" target="_blank">Just in Beer</a>, vindt plaats bij EM2 "the Barn" (<a href="http://em2groningen.nl/route-parkeren/" target="_blank">routebeschrijving</a>) in Groningen. We starten 26 mei al vroeg in de middag om 12:00 uur en sluiten pas af om 01:30 uur in de nacht! <strong>Een hele dag plezier voor €14,95 in de voorverkoop (aan de deur €16,95)</strong>, inclusief 20 cl speciaal festivalglas. Een muntje kost €2,50 en er kan gepind worden.
-      </p>
-      <p>
-        Tickets zijn te koop bij Just in Beer (Folkingestraat 18, Groningen) of <a href="https://frontoffice.paylogic.nl/?event_id=122408&point_of_sale_id=17537" target="_blank" title="Koop hier je tickets">koop hier</a> direct je ticket(s) online.
-      </p>
-      </p>
-      <p>
-        We zullen nog veel doen aan de verdere inrichting van vermaak en masterclasses/proeverijen aankondigen, waarvan apart tickets kunnen worden besteld.
-      </p>
-      <p>
-        <a href="https://www.facebook.com/events/191110228287711/" target="_blank">Volg ons op Facebook</a> om op de hoogte te blijven!
-      <p>
-        Lees <a href="/huisregels/">hier</a> de huisregels die van toepassing zijn op het festival.
+        <strong>Stay tuned!</strong>
       </p>
     </article>
   </div>
 </section>
-
-<%= partial "ticket" %>
