--- a/source/partials/_schema.erb
+++ b/source/partials/_schema.erb
@@ -1,52 +1,31 @@
 <script type="application/ld+json">
 {
   "@context": "http://schema.org",
-  "@type": "LiquorStore",
-  "name": "Just in Beer",
-  "image": "",
-  "@id": "https://www.justinbeer.nl",
-  "url": "https://www.justinbeer.nl/",
-  "telephone": "+31643469823",
-  "email": "just_in_beer@hotmail.com",
-  "priceRange": "0-100",
-  "address": {
-    "@type": "PostalAddress",
-    "streetAddress": "Folkingestraat 18",
-    "addressLocality": "Groningen",
-    "postalCode": "9711 JW",
-    "addressCountry": "NL"
+  "@type": "Event",
+  "name": "HOP! into the Grain Craft Beer & Music Festival 2019",
+  "description": "In een ongedwongen sfeer lekker van de diverse biertjes en fijne muziek genieten.",
+  "image": "https://www.hopintothegrainfestival.nl/images/logo-hop-into-the-grain-big.png",
+  "startDate": "2019-05-25T15:00",
+  "endDate": "2019-05-25T23:00",
+  "location": {
+    "@type": "Place",
+    "name": "EM2 'the barn'",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Energieweg 10",
+      "addressLocality": "Groningen",
+      "postalCode": "9743 AN",
+      "addressCountry": "NL"
+    }
   },
-  "openingHoursSpecification": [{
-    "@type": "OpeningHoursSpecification",
-    "dayOfWeek": "Tuesday",
-    "opens": "12:00",
-    "closes": "17:00"
-  },{
-    "@type": "OpeningHoursSpecification",
-    "dayOfWeek": "Wednesday",
-    "opens": "13:00",
-    "closes": "18:00"
-  },{
-    "@type": "OpeningHoursSpecification",
-    "dayOfWeek": "Thursday",
-    "opens": "11:00",
-    "closes": "21:00"
-  },{
-    "@type": "OpeningHoursSpecification",
-    "dayOfWeek": "Friday",
-    "opens": "11:00",
-    "closes": "19:00"
-  },{
-    "@type": "OpeningHoursSpecification",
-    "dayOfWeek": "Saturday",
-    "opens": "11:00",
-    "closes": "18:00"
-  },{
-    "@type": "OpeningHoursSpecification",
-    "dayOfWeek": "Sunday",
-    "opens": "12:00",
-    "closes": "17:00"
-  }],
-  "sameAs": "https://www.facebook.com/Just.in.Beer.Groningen/"
+  "offers": {
+    "@type": "Offer",
+    "name": "Ticket",
+    "price": "10.99",
+    "priceCurrency": "EUR",
+    "validFrom": "2019-03-02T09:00",
+    "url": "https://www.yourticketprovider.nl/events/28950-hop-into-the-grain/",
+    "availability": "http://schema.org/InStock"
+  }
 }
 </script>
