--- a/source/assets/stylesheets/components/_site-navigation.scss
+++ b/source/assets/stylesheets/components/_site-navigation.scss
@@ -1,54 +1,14 @@
 .site-navigation {
-  background: $white;
-  height: 50px;
-  line-height: 50px;
-  position: relative;
+  background: $bordeaux;
+  height: 60px;
+  line-height: 60px;
+  position: fixed;
   width: 100%;
   z-index: 2;
-
-  @include grid-media($for-desktop-up) {
-    height: auto;
-  }
 
   .logo {
     font-size: $base-font-size * 1.6;
     padding-left: 1em;
-
-    @include grid-media($for-desktop-up) {
-      display: block;
-      padding: 0;
-      text-align: center;
-    }
-
-    .home {
-      @include grid-media($for-desktop-up) {
-        display: block;
-        height: 150px;
-        margin: 1em auto;
-        width: 240px;
-      }
-    }
-
-    .logo-desktop {
-      display: none;
-
-      @include grid-media($for-desktop-up) {
-        display: block;
-      }
-    }
-
-    .logo-mobile {
-      display: block;
-
-      @include grid-media($for-desktop-up) {
-        display: none;
-      }
-    }
-
-    a {
-      color: $dark-gray;
-      font-family: $heading-font-family, sans-serif;
-    }
   }
 
   a {
@@ -61,16 +21,12 @@
     cursor: pointer;
     display: block;
     font-size: 20px;
-    height: 50px;
+    height: 60px;
     position: absolute;
     right: 0;
     top: 0;
     transition: all 200ms ease-in;
-    width: 50px;
-
-    @include grid-media($for-desktop-up) {
-      display: none;
-    }
+    width: 60px;
 
     span {
       background-color: $white;
@@ -130,34 +86,18 @@
     transition: max-height 0.4s;
     width: 100%;
 
-    @include grid-media($for-desktop-up) {
-      border-top: $base-border;
-      display: block;
-      max-height: none;
-      text-align: center;
-    }
-
     .menu {
       list-style-type: none;
       margin: 0;
       padding: 0;
 
-      @include grid-media($for-desktop-up) {
-        display: flex;
-        justify-content: center;
-      }
-
       li {
         display: block;
         list-style-type: none;
-
-        @include grid-media($for-desktop-up) {
-          text-align: center;
-        }
       }
 
       a {
-        background: $dark-gray;
+        background: $bordeaux;
         border-bottom: $base-border;
         color: $white;
         display: block;
@@ -167,44 +107,11 @@
         padding: 0 $base-spacing * 0.7;
         text-transform: uppercase;
 
-        @include grid-media($for-desktop-up) {
-          background: linear-gradient($slightly-desaturated-orange, $slightly-desaturated-orange);
-          background-position: 0 3em;
-          background-repeat: no-repeat;
-          background-size: 100% 0.1em;
-          border-bottom: 0;
-          color: $dark-gray;
-          display: block;
-
-          &:hover {
-            background-position: 0 bottom;
-            color: $slightly-desaturated-orange;
-            text-decoration: none;
-          }
-
-          &.language-link {
-            span {
-              @include grid-media($for-desktop-up) {
-                display: none;
-              }
-            }
-
-            &:hover {
-              background-position: 0 3em;
-            }
-          }
-        }
-
         &[aria-current]:not([aria-current="false"]) {
           background-color: $white;
           background-position: 0 bottom;
           color: $slightly-desaturated-orange;
           font-weight: $font-weight-semibold;
-
-          @include grid-media($for-desktop-up) {
-            color: $slightly-desaturated-orange;
-            font-weight: $font-weight-small;
-          }
         }
       }
     }
