--- a/source/partials/_banner.erb
+++ b/source/partials/_banner.erb
@@ -3,13 +3,27 @@
   <% if locals[:title] || locals[:text] || (locals[:button_link] && locals[:button_text]) %>
     <div class="grid-row">
 
-      <% if locals[:title] %>
+      <% if locals[:svg_image] %>
+        <%= inline_svg svg_image, alt: title, class: "banner-image" %>
+      <% else %>
         <%= content_tag title_tag ||= :h1, class: "title" do title end %>
       <% end %>
 
       <% if locals[:text] %>
         <p class="text">
           <%= text %>
+        </p>
+      <% end %>
+
+      <% if locals[:date] %>
+        <p class="text">
+          <%= date %>
+        </p>
+      <% end %>
+
+      <% if locals[:location] %>
+        <p class="text">
+          <%= location %>
         </p>
       <% end %>
 
