Add all nav items

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -15,7 +15,7 @@ blog: menu
                                          location: t("pages.index.banner.location"),
                                          date: t("pages.index.banner.date")} %>
 
-<section class="introduction single-column">
+<section class="introduction single-column" id="about">
   <div class="grid-row">
     <article>
       <%= partial "homepage/informatie" %>
@@ -23,25 +23,25 @@ blog: menu
   </div>
 </section>
 
-<section class="bands">
+<section class="bands" id="bands">
   <div class="grid-row">
     <h2><%= t("sections.bands.title") %></h2>
   </div>
 </section>
 
-<section class="breweries">
+<section class="breweries" id="breweries">
   <div class="grid-row">
     <h2><%= t("sections.breweries.title") %></h2>
   </div>
 </section>
 
-<section class="tickets">
+<section class="tickets" id="tickets">
   <div class="grid-row">
     <h2><%= t("sections.tickets.title") %></h2>
   </div>
 </section>
 
-<section class="extra-info">
+<section class="extra-info" id="info">
   <div class="grid-row">
     <h2><%= t("sections.extra-info.title") %></h2>
   </div>
