--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -10,7 +10,7 @@ blog: menu
                                          variant: "variant-big",
                                          variant_overlay: "primary-overlay",
                                          background_image: "banner-homepage.jpg",
-                                         svg_image: "logo-hop-into-the-grain-festival.svg",
+                                         png_image: "logo-hop-into-the-grain-festival.png",
                                          title: t("pages.index.banner.title"),
                                          location: t("pages.index.banner.location"),
                                          date: t("pages.index.banner.date")} %>
