--- a/source/assets/stylesheets/components/_site-navigation.scss
+++ b/source/assets/stylesheets/components/_site-navigation.scss
@@ -7,9 +7,8 @@
   width: 100%;
   z-index: 2;
 
-  .logo {
-    font-size: $base-font-size * 1.6;
-    padding-left: 1em;
+  @include grid-media($for-desktop-up) {
+    padding-top: 0;
   }
 
   a {
@@ -28,6 +27,10 @@
     top: 0;
     transition: all 200ms ease-in;
     width: 60px;
+
+    @include grid-media($for-desktop-up) {
+      display: none;
+    }
 
     span {
       background-color: $white;
@@ -87,6 +90,11 @@
     transition: max-height 0.4s;
     width: 100%;
 
+    @include grid-media($for-desktop-up) {
+      max-height: 60px;
+      text-align: center;
+    }
+
     .menu {
       list-style-type: none;
       margin: 0;
@@ -95,6 +103,10 @@
       li {
         display: block;
         list-style-type: none;
+
+        @include grid-media($for-desktop-up) {
+          display: inline-block;
+        }
       }
 
       a {
@@ -107,6 +119,14 @@
         font-weight: $font-weight-small;
         padding: 0 $base-spacing * 0.7;
         text-transform: uppercase;
+
+        @include grid-media($for-desktop-up) {
+          border-bottom: 0;
+        }
+
+        &:last-child {
+          border-bottom: 0;
+        }
 
         &[aria-current]:not([aria-current="false"]) {
           background-color: $white;
