--- a/source/assets/stylesheets/pages/_index.scss
+++ b/source/assets/stylesheets/pages/_index.scss
@@ -1,6 +1,6 @@
 body.index {
   header.banner {
-    $banner-image: "../images/banner-homepage.jpg";
+    $banner-image: "../images/banner-homepage.png";
     background-image: url($banner-image);
   }
 
