--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -8,8 +8,7 @@ blog: menu
 
 <%= partial "partials/banner", locals: { id: "home",
                                          variant: "variant-big",
-                                         variant_overlay: "primary-overlay",
-                                         background_image: "banner-homepage.jpg",
+                                         background_image: "banner-homepage.png",
                                          png_image: "logo-hop-into-the-grain-festival.png",
                                          title: t("pages.index.banner.title"),
                                          location: t("pages.index.banner.location"),
