--- a/source/assets/stylesheets/pages/_index.scss
+++ b/source/assets/stylesheets/pages/_index.scss
@@ -5,6 +5,9 @@ body.index {
   }
 
   section {
+    .grid-row {
+      padding: 4em 1em;
+    }
     h2 {
       font-size: $base-font-size * 1.6;
       margin-bottom: 1em;
@@ -12,7 +15,7 @@ body.index {
     }
 
     p {
-      margin-bottom: 0;
+      // margin-bottom: 0;
       text-align: center;
     }
   }
