--- a/source/assets/stylesheets/components/_banner.scss
+++ b/source/assets/stylesheets/components/_banner.scss
@@ -6,6 +6,7 @@ header.banner {
   position: relative;
 
   .banner-image {
+    margin-bottom: 2em;
     max-height: 80%;
     max-width: 80%;
 
@@ -27,20 +28,12 @@ header.banner {
       padding: 6em 0;
     }
 
-    h1 {
-      font-size: $base-font-size * 2.6;
-
-      @include grid-media($for-desktop-up) {
-        font-size: $base-font-size * 3;
-      }
-
-      span {
-        display: block;
-      }
-    }
-
     p {
       font-size: $base-font-size * 1.2;
+
+      @include grid-media($for-desktop-up) {
+        font-size: $base-font-size * 1.4;
+      }
     }
   }
 
