--- a/source/partials/_site_navigation.erb
+++ b/source/partials/_site_navigation.erb
@@ -31,12 +31,12 @@
       </li>
       <li>
         <% if lang == :nl %>
-          <a href="/en/" class="language-link">
+          <a href="/en/" class="language-link root-link">
             <%= inline_svg "en.svg", alt: "English" %>
             <span>English</span>
           </a>
         <% elsif lang == :en %>
-          <a href="/" class="language-link">
+          <a href="/" class="language-link root-link">
             <%= inline_svg "nl.svg", alt: "Nederlands" %>
             <span>Nederlands</span>
           </a>
