Add flex list for bands and breweries

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -23,6 +23,38 @@ blog: menu
 <section class="bands" id="bands">
   <div class="grid-row">
     <h2><%= t("sections.bands.title") %></h2>
+
+    <div class="flex-wrapper">
+
+      <div class="flex-item">
+        <div class="item-image">
+          <%= image_tag "assets/images/bands/electric-hollers.jpg", alt: "Electric Hollers" %>
+        </div>
+        <div class="item-text">
+          <h3>
+            Electric hollers
+          </h3>
+          <p>
+            Electric Hollers staat voor een nieuwe generatie  blues en rock artiesten uit Noord-Nederland. De band laat zich inspireren door bands als Led Zeppelin, Santana & Ten Years After en bracht in 2018 hun eerste plaat ‘Rise’ uit.
+          </p>
+        </div>
+      </div>
+
+      <div class="flex-item">
+        <div class="item-image">
+          <%= image_tag "assets/images/bands/electric-hollers.jpg", alt: "Electric Hollers" %>
+        </div>
+        <div class="item-text">
+          <h3>
+            Electric Hollers
+          </h3>
+          <p>
+            Electric Hollers staat voor een nieuwe generatie  blues en rock artiesten uit Noord-Nederland. De band laat zich inspireren door bands als Led Zeppelin, Santana & Ten Years After en bracht in 2018 hun eerste plaat ‘Rise’ uit.
+          </p>
+        </div>
+      </div>
+
+    </div>
   </div>
 </section>
 
