--- a/source/assets/stylesheets/main.css.scss
+++ b/source/assets/stylesheets/main.css.scss
@@ -14,6 +14,7 @@
 @import "components/article";
 @import "components/banner";
 @import "components/buttons";
+@import "components/flex-wrapper";
 @import "components/forms";
 @import "components/icons";
 @import "components/maps";
