Remove jquery scrollto

--- a/source/assets/stylesheets/pages/_index.scss
+++ b/source/assets/stylesheets/pages/_index.scss
@@ -14,13 +14,13 @@ body.index {
       margin-bottom: 1em;
       text-align: center;
     }
+
+    &.bands {
+      background-color: $lightest-gray;
+    }
   }
 
   article {
     margin-bottom: 2em;
-  }
-
-  section.bands {
-    background-color: $lightest-gray;
   }
 }
