Add first breweries

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -32,20 +32,6 @@ blog: menu
         </div>
         <div class="item-text">
           <h3>
-            Electric hollers
-          </h3>
-          <p>
-            Electric Hollers staat voor een nieuwe generatie  blues en rock artiesten uit Noord-Nederland. De band laat zich inspireren door bands als Led Zeppelin, Santana & Ten Years After en bracht in 2018 hun eerste plaat ‘Rise’ uit.
-          </p>
-        </div>
-      </div>
-
-      <div class="flex-item">
-        <div class="item-image">
-          <%= image_tag "assets/images/bands/electric-hollers.jpg", alt: "Electric Hollers" %>
-        </div>
-        <div class="item-text">
-          <h3>
             Electric Hollers
           </h3>
           <p>
@@ -54,6 +40,10 @@ blog: menu
         </div>
       </div>
 
+      <p class="more">
+        <em>Meer bands to be announced!</em>
+      </p>
+
     </div>
   </div>
 </section>
@@ -61,6 +51,57 @@ blog: menu
 <section class="breweries" id="breweries">
   <div class="grid-row">
     <h2><%= t("sections.breweries.title") %></h2>
+
+    <div class="flex-wrapper">
+
+      <div class="flex-item">
+        <div class="item-image">
+          <%= image_tag "assets/images/breweries/stanislaus-brewskovitch.svg", alt: "Stanislaus Brewskovitch" %>
+        </div>
+        <div class="item-text">
+          <h3>
+            Stanislaus Brewskovitch
+          </h3>
+          <p>
+            “Because nothing epic happens drinking water”. These beer-evangelists from Enschede are on a mission to spread the word of good-craft-beer.
+          </p>
+        </div>
+      </div>
+
+      <div class="flex-item">
+        <div class="item-image">
+          <%= image_tag "assets/images/breweries/berging-brouwerij.png", alt: "Berging Brouwerij" %>
+        </div>
+        <div class="item-text">
+          <h3>
+            Berging Brouwerij
+          </h3>
+          <p>
+            Ongecompliceerd en toch bijzonder. Berging zet in op traditionele smaken opnieuw uitvinden en duurzame recepten ontwikkelen.
+          </p>
+        </div>
+      </div>
+
+      <div class="flex-item">
+        <div class="item-image">
+          <%= image_tag "assets/images/breweries/brouwerij-klein-duimpje.png", alt: "Brouwerij Klein Duimpje" %>
+        </div>
+        <div class="item-text">
+          <h3>
+            Brouwerij Klein Duimpje
+          </h3>
+          <p>
+            Meer dan 20 jaar brouw ervaring en meer dan 20 biertje op hun naam is ‘klein duimpje’ zeker geen kleine in het craft-beer-land.
+          </p>
+        </div>
+      </div>
+
+      <p class="more">
+        <em>Meer brouwerijen to be announced!</em>
+      </p>
+
+
+    </div>
   </div>
 </section>
 
