--- a/source/assets/stylesheets/components/_flex-wrapper.scss
+++ b/source/assets/stylesheets/components/_flex-wrapper.scss
@@ -5,32 +5,34 @@
     text-align: left;
   }
 
-  .flex-item {
-    padding: 2em 1em;
+  .more {
+    text-align: center;
+  }
 
+  .flex-item {
     @include grid-media($for-desktop-up) {
       display: flex;
+      padding: 2em 1em;
     }
   }
 
   .item-image {
     border: 2px solid $white;
     border-radius: 50%;
-    height: 320px;
+    height: 280px;
     margin: 0 auto 1em;
     overflow: hidden;
-    width: 320px;
+    width: 280px;
 
     @include grid-media($for-desktop-up) {
-      height: 120px;
-      width: 120px;
       flex: 0 0 120px;
+      height: 120px;
       margin-right: 1em;
-
+      width: 120px;
     }
 
     img {
-      max-width: 100%;
+      width: 100%;
     }
   }
 }
