--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -35,13 +35,13 @@ blog: menu
             Electric Hollers
           </h3>
           <p>
-            Electric Hollers staat voor een nieuwe generatie  blues en rock artiesten uit Noord-Nederland. De band laat zich inspireren door bands als Led Zeppelin, Santana & Ten Years After en bracht in 2018 hun eerste plaat ‘Rise’ uit.
+            <%= t("sections.bands.electric-hollers.text") %>
           </p>
         </div>
       </div>
 
       <p class="more">
-        <em>Meer bands to be announced!</em>
+        <em><%= t("sections.bands.more") %></em>
       </p>
 
     </div>
@@ -63,7 +63,7 @@ blog: menu
             Stanislaus Brewskovitch
           </h3>
           <p>
-            “Because nothing epic happens drinking water”. These beer-evangelists from Enschede are on a mission to spread the word of good-craft-beer.
+            <%= t("sections.breweries.stanislaus.text") %>
           </p>
         </div>
       </div>
@@ -77,7 +77,7 @@ blog: menu
             Berging Brouwerij
           </h3>
           <p>
-            Ongecompliceerd en toch bijzonder. Berging zet in op traditionele smaken opnieuw uitvinden en duurzame recepten ontwikkelen.
+            <%= t("sections.breweries.berging.text") %>
           </p>
         </div>
       </div>
@@ -91,13 +91,13 @@ blog: menu
             Brouwerij Klein Duimpje
           </h3>
           <p>
-            Meer dan 20 jaar brouw ervaring en meer dan 20 biertje op hun naam is ‘klein duimpje’ zeker geen kleine in het craft-beer-land.
+            <%= t("sections.breweries.klein-duimpje.text") %>
           </p>
         </div>
       </div>
 
       <p class="more">
-        <em>Meer brouwerijen to be announced!</em>
+        <em><%= t("sections.breweries.more") %></em>
       </p>
 
 
