--- a/source/assets/stylesheets/components/_social-links.scss
+++ b/source/assets/stylesheets/components/_social-links.scss
@@ -1,30 +1,25 @@
-// .social-links {
-//   background-color: $bordeaux;
-//   line-height: normal;
-//   padding: 2em 0;
-//   position: relative;
-//   text-align: center;
-//   z-index: 1;
-//
-//   @include grid-media($for-desktop-up) {
-//     background-color: transparent;
-//     padding: 1em;
-//     position: fixed;
-//     right: 0;
-//     top: 0;
-//   }
-//
-//   [class^="icon-"],
-//   [class*=" icon-"] {
-//     background-color: $white;
-//     border-radius: 50%;
-//     color: $dark-gray;
-//     font-size: $base-font-size * 1.2;
-//     margin: 0 0.2em;
-//     padding: $base-spacing * 0.4;
-//
-//     &:hover {
-//       background-color: lighten($dark-gray, 50%);
-//     }
-//   }
-// }
+.social-links {
+  line-height: normal;
+  padding: 2em 0;
+  position: relative;
+  text-align: center;
+  z-index: 1;
+
+  a {
+    text-decoration: none;
+  }
+
+  [class^="icon-"],
+  [class*=" icon-"] {
+    background-color: $bordeaux;
+    border-radius: 50%;
+    color: $white;
+    font-size: $base-font-size * 1.8;
+    margin: 0 0.2em;
+    padding: $base-spacing * 0.4;
+
+    &:hover {
+      background-color: darken($bordeaux, 10%);
+    }
+  }
+}
