--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -107,13 +107,45 @@ blog: menu
 
 <section class="tickets" id="tickets">
   <div class="grid-row">
+
     <h2><%= t("sections.tickets.title") %></h2>
+
+    <p><%= t("sections.tickets.text") %></p>
+
+    <h3>Online</h3>
+    <p>Early Beer €10,00 (+ €0,99 <%= t("sections.tickets.service") %>)</p>
+    <p>Normaal €12,50 (+ €0,99 <%= t("sections.tickets.service") %>)</p>
+
+    <div class="buy-now">
+      <a href="https://www.yourticketprovider.nl/events/28950-hop-into-the-grain/" class="button big orange">
+        <%= t("sections.tickets.buy-now") %>
+      </a>
+    </div>
+
+    <h3>Offline</h3>
+    <p>Hard Copy ticket @ Just in Beer €12,50</p>
+    <p><%= t("sections.tickets.door-price") %> €14,00</p>
+
   </div>
 </section>
 
 <section class="extra-info" id="info">
   <div class="grid-row">
     <h2><%= t("sections.extra-info.title") %></h2>
+
+    <p>
+      => <%= t("sections.extra-info.line-1") %><br>
+      => <%= t("sections.extra-info.line-2") %><br>
+      => <%= t("sections.extra-info.line-3") %>
+    </p>
+
+  </div>
+</section>
+
+<section class="social" id="social">
+  <div class="grid-row">
+    <h2><%= t("sections.social.title") %></h2>
+    <%= partial "partials/social-links" %>
   </div>
 </section>
 
