--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -1,7 +1,7 @@
 ---
 description:
-  nl: "Dé speciaalbierwinkel van Groningen met het grootste en beste assortiment. Wij zijn geopend van dinsdag t/m zondag."
-  en: "The craft beer store in Groningen with the largest and best collection of beer. We are open from Tuesday to Sunday."
+  nl: "Welkom bij HOP! Into the Grain Craft Beer & Music Festival"
+  en: "Welcome to HOP! Into the Grain Craft Beer & Music Festival"
 sitemap_priority: 1
 blog: menu
 ---
