Fix spacing tickets section

--- a/source/assets/stylesheets/pages/_index.scss
+++ b/source/assets/stylesheets/pages/_index.scss
@@ -25,6 +25,14 @@ body.index {
       background-size: cover;
       text-align: center;
 
+      h2 {
+        margin: 0;
+      }
+
+      .headline {
+        padding-bottom: 2em;
+      }
+
       .buy-now {
         padding: 2em 0;
       }
