--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -108,9 +108,11 @@ blog: menu
 <section class="tickets" id="tickets">
   <div class="grid-row">
 
-    <h2><%= t("sections.tickets.title") %></h2>
+    <div class="headline">
+      <h2><%= t("sections.tickets.title") %></h2>
 
-    <p><%= t("sections.tickets.text") %></p>
+      <p><%= t("sections.tickets.text") %></p>
+    </div>
 
     <h3>Online</h3>
     <p>Early Beer €10,00 (+ €0,99 <%= t("sections.tickets.service") %>)</p>
