--- a/source/partials/_site_navigation.erb
+++ b/source/partials/_site_navigation.erb
@@ -9,13 +9,13 @@
   <div class="navigation-bar">
     <ul class="menu">
       <li>
-        <%= current_link_to t("navigation.index"), "#home", class: "root-link", data: "scroll-to" %></li><li>
-        <%= current_link_to t("navigation.about"), "#about", class: "root-link", data: "scroll-to"  %></li><li>
-        <%= current_link_to t("navigation.bands"), "#bands", class: "root-link", data: "scroll-to"  %></li><li>
-        <%= current_link_to t("navigation.breweries"), "#breweries", class: "root-link", data: "scroll-to"  %></li><li>
-        <%= current_link_to t("navigation.tickets"), "#tickets", class: "root-link", data: "scroll-to"  %></li><li>
-        <%= current_link_to t("navigation.info"), "#info", class: "root-link", data: "scroll-to"  %></li><li>
-        <%= current_link_to t("navigation.contact"), "#contact", class: "root-link", data: "scroll-to"  %></li><li>
+        <%= current_link_to t("navigation.index"), "#home", class: "root-link" %></li><li>
+        <%= current_link_to t("navigation.about"), "#about", class: "root-link" %></li><li>
+        <%= current_link_to t("navigation.bands"), "#bands", class: "root-link" %></li><li>
+        <%= current_link_to t("navigation.breweries"), "#breweries", class: "root-link" %></li><li>
+        <%= current_link_to t("navigation.tickets"), "#tickets", class: "root-link" %></li><li>
+        <%= current_link_to t("navigation.info"), "#info", class: "root-link" %></li><li>
+        <%= current_link_to t("navigation.contact"), "#contact", class: "root-link" %></li><li>
         <% if lang == :nl %>
           <a href="/en/" class="language-link root-link">
             <%= inline_svg "en.svg", alt: "English" %>
